<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_border"
            android:text="@string/connect"
            android:textColor="@color/black"
            android:textSize="28sp" />


        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/service_button"
            android:layout_alignBottom="@id/service_button"
            android:layout_toStartOf="@+id/status_button"
            android:layout_toEndOf="@id/service_button"
            android:gravity="center"
            android:text="@string/disconnected_status"
            android:textAlignment="center"
            android:textColor="@color/cyan"
            android:textSize="18sp" />

        <Button
            android:id="@+id/status_button"
            android:layout_width="25dp"
            android:layout_height="10dp"
            android:layout_alignTop="@id/service_button"
            android:layout_alignBottom="@id/service_button"
            android:layout_alignParentEnd="true"
            android:background="@drawable/red_round_button"
            android:textColor="@color/red" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/get_songs_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textOff="@string/show_songs"
            android:textOn="@string/hide_songs"
            android:textSize="28sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/song_row_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/bitmap_layout_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/bitmap_main"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:contentDescription="@string/song_bitmap_description"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/gallery_thumb"/>
        </LinearLayout>

        <TextView
            android:id="@+id/song_title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/bitmap_layout_main"
            android:padding="5dp"
            android:text="@string/song_title_description"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artist_name_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_title_main"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/bitmap_layout_main"
            android:padding="5dp"
            android:text="@string/song_artist"
            android:textColor="@color/lightGrey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <RelativeLayout
            android:id="@+id/media_button_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/artist_name_main"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/bitmap_layout_main"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/media_button_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:src="@android:drawable/ic_media_play"
                android:contentDescription="@string/play_pause_button" />
        </RelativeLayout>
    </RelativeLayout>


    <ListView
        android:id="@+id/song_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/background_light"
        android:dividerHeight="5sp" />
</LinearLayout>