<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/song_row"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/bitmap_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/bitmap"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/song_bitmap_description"
            android:padding="5dp"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/bitmap_layout"
        android:padding="5dp"
        android:text="@string/song_title_description"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_title"
        android:layout_toEndOf="@id/bitmap_layout"
        android:padding="5dp"
        android:text="@string/song_artist"
        android:textSize="12sp"
        android:textColor="#808080"
        android:textStyle="italic" />
</RelativeLayout>